Advances in cards 4.3 and 5

--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -5,5 +5,12 @@
   Created by ana.mancuso on 23/09/2022.
   
 */
-/* PRODUCTS VIEW*/
-"PRODUCTS_VIEW_NAVEGATION_BAR" = "LIBRARY";
+/* SIGN IN BUTTON */
+ "SIGN_IN_BUTTON" = "SIGN IN";
+ 
+/* TAB BAR AND NAVIGATION CONTROLLER*/
+
+"TITLE_VIEW_LIBRARY" = "LIBRARY";
+"TITLE_VIEW_WISHLIST" = "WISHLIST";
+"TITLE_VIEW_ADDNEW" = "ADD NEW";
+"TITLE_VIEW_RENTALS" = "RENTALS";
