--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -5,5 +5,11 @@
   Created by ana.mancuso on 23/09/2022.
   
 */
-/* PRODUCTS VIEW*/
-"PRODUCTS_VIEW_NAVEGATION_BAR" = "BIBLIOTECA";
+/* SIGN IN BUTTON */
+ "SIGN_IN_BUTTON" = "INGRESAR";
+
+/* TAB BAR AND NAVIGATION CONTROLLER*/
+"TITLE_VIEW_LIBRARY" = "BIBLIOTECA";
+"TITLE_VIEW_WISHLIST" = "LISTA DE DESEO";
+"TITLE_VIEW_ADDNEW" = "AGREGAR";
+"TITLE_VIEW_RENTALS" = "RENTAS";
