implement book urls

--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -14,3 +14,4 @@
 "TITLE_VIEW_WISHLIST" = "WISHLIST";
 "TITLE_VIEW_ADDNEW" = "ADD NEW";
 "TITLE_VIEW_RENTALS" = "RENTALS";
+"TITLE_VIEW_DETAILS" = "BOOK DETAILS";
