--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -9,7 +9,9 @@
  "SIGN_IN_BUTTON" = "INGRESAR";
 
 /* TAB BAR AND NAVIGATION CONTROLLER*/
+
 "TITLE_VIEW_LIBRARY" = "BIBLIOTECA";
 "TITLE_VIEW_WISHLIST" = "LISTA DE DESEO";
 "TITLE_VIEW_ADDNEW" = "AGREGAR";
 "TITLE_VIEW_RENTALS" = "RENTAS";
+"TITLE_VIEW_DETAILS" = "DETALLES";
