Modify Reviews and Details of Books

--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -15,3 +15,8 @@
 "TITLE_VIEW_ADDNEW" = "ADD NEW";
 "TITLE_VIEW_RENTALS" = "RENTALS";
 "TITLE_VIEW_DETAILS" = "BOOK DETAILS";
+
+/* COMMENTS TO BOOKED BOOK*/
+
+"COMMENT_BOOKED_SUCCESSFULLY" = "I booked the book successfully!"
+"COMMENT_BOOKED_ERROR" = "The book is unavailable :("
