--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -15,3 +15,8 @@
 "TITLE_VIEW_ADDNEW" = "AGREGAR";
 "TITLE_VIEW_RENTALS" = "RENTAS";
 "TITLE_VIEW_DETAILS" = "DETALLES";
+
+/* COMMENTS TO BOOKED BOOK*/
+
+"COMMENT_BOOKED_SUCCESSFULLY" = "¡Reservo el libro con éxito!"
+"COMMENT_BOOKED_ERROR" = "El libro no está disponible :("
