--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -18,5 +18,5 @@
 
 /* COMMENTS TO BOOKED BOOK*/
 
-"COMMENT_BOOKED_SUCCESSFULLY" = "I booked the book successfully!"
-"COMMENT_BOOKED_ERROR" = "The book is unavailable :("
+"COMMENT_BOOKED_SUCCESSFULLY" = "I BOOKED THE BOOK SUCCESFULLY";
+"COMMENT_BOOKED_ERROR" = "THE BOOK IS UNAVAILABLE";
