--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -18,5 +18,5 @@
 
 /* COMMENTS TO BOOKED BOOK*/
 
-"COMMENT_BOOKED_SUCCESSFULLY" = "¡Reservo el libro con éxito!"
-"COMMENT_BOOKED_ERROR" = "El libro no está disponible :("
+"COMMENT_BOOKED_SUCCESSFULLY" = "RESERVO EL LIBRO CON EXITO";
+"COMMENT_BOOKED_ERROR" = "EL LIBRO NO ESTA DISPONIBLE";
