Fixed in DetailViewController

--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -19,4 +19,6 @@
 /* COMMENTS TO BOOKED BOOK*/
 
 "COMMENT_BOOKED_SUCCESSFULLY" = "I BOOKED THE BOOK SUCCESFULLY";
-"COMMENT_BOOKED_ERROR" = "THE BOOK IS UNAVAILABLE";
+"COMMENT_BOOKED_NO_RENT" = "THE BOOK IS UNAVAILABLE";
+"COMMENT_BOOKED_ERROR" = "A PROBLEM HAS OCCURRED";
+"ALERT_BOOKED_SUCCESFULLY" = "SUCCESS!";
