--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -20,3 +20,5 @@
 
 "COMMENT_BOOKED_SUCCESSFULLY" = "RESERVO EL LIBRO CON EXITO";
 "COMMENT_BOOKED_ERROR" = "EL LIBRO NO ESTA DISPONIBLE";
+"COMMENT_BOOKED_ERROR" = "HA OCURRIDO UN PROBLEMA";
+"ALERT_BOOKED_SUCCESFULLY" = "RENTA EXITOSA!";
