--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -22,3 +22,12 @@
 "COMMENT_BOOKED_ERROR" = "EL LIBRO NO ESTA DISPONIBLE";
 "COMMENT_BOOKED_ERROR" = "HA OCURRIDO UN PROBLEMA";
 "ALERT_BOOKED_SUCCESFULLY" = "RENTA EXITOSA!";
+
+/* ADD NEW BOOK TITLES*/
+
+"TITLE_BOOK" = "TITULO";
+"AUTHOR_BOOK" = "AUTOR";
+"YEAR_BOOK" = "AÑO";
+"GENRE_BOOK" = "GENERO";
+"DESCRIPTION_BOOK" = "DESCRIPCION";
+"SUBMIT_BUTTON_TEXT" = "GUARDAR";
