--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 /* SIGN IN BUTTON */
  "SIGN_IN_BUTTON" = "SIGN IN";
  
-/* TAB BAR AND NAVIGATION CONTROLLER*/
+/* TAB BAR AND NAVIGATION CONTROLLER */
 
 "TITLE_VIEW_LIBRARY" = "LIBRARY";
 "TITLE_VIEW_WISHLIST" = "WISHLIST";
@@ -16,9 +16,18 @@
 "TITLE_VIEW_RENTALS" = "RENTALS";
 "TITLE_VIEW_DETAILS" = "BOOK DETAILS";
 
-/* COMMENTS TO BOOKED BOOK*/
+/* COMMENTS TO BOOKED BOOK */
 
 "COMMENT_BOOKED_SUCCESSFULLY" = "I BOOKED THE BOOK SUCCESFULLY";
 "COMMENT_BOOKED_NO_RENT" = "THE BOOK IS UNAVAILABLE";
 "COMMENT_BOOKED_ERROR" = "A PROBLEM HAS OCCURRED";
 "ALERT_BOOKED_SUCCESFULLY" = "SUCCESS!";
+
+/* ADD NEW BOOK TITLES */
+
+"TITLE_BOOK" = "TITLE";
+"AUTHOR_BOOK" = "AUTHOR";
+"YEAR_BOOK" = "YEAR";
+"GENRE_BOOK" = "GENRE";
+"DESCRIPTION_BOOK" = "DESCRIPTION";
+"SUBMIT_BUTTON_TEXT" = "SUBMIT";
