--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -5,8 +5,12 @@
   Created by ana.mancuso on 23/09/2022.
   
 */
-/* SIGN IN BUTTON */
+
+/* BUTTONS TEXTS */
  "SIGN_IN_BUTTON" = "SIGN IN";
+"SUBMIT_BUTTON_TEXT" = "SUBMIT";
+"RENT_BUTTON" = "RENT";
+"ADD_TO_WISHLIST_BUTTON" = "ADD TO WISHLIST";
  
 /* TAB BAR AND NAVIGATION CONTROLLER */
 
@@ -23,11 +27,10 @@
 "COMMENT_BOOKED_ERROR" = "A PROBLEM HAS OCCURRED";
 "ALERT_BOOKED_SUCCESFULLY" = "SUCCESS!";
 
-/* ADD NEW BOOK TITLES */
+/* TEXT FIELDS TITLES */
 
 "TITLE_BOOK" = "TITLE";
 "AUTHOR_BOOK" = "AUTHOR";
 "YEAR_BOOK" = "YEAR";
 "GENRE_BOOK" = "GENRE";
 "DESCRIPTION_BOOK" = "DESCRIPTION";
-"SUBMIT_BUTTON_TEXT" = "SUBMIT";
