--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -5,8 +5,11 @@
   Created by ana.mancuso on 23/09/2022.
   
 */
-/* SIGN IN BUTTON */
- "SIGN_IN_BUTTON" = "INGRESAR";
+/* BUTTONS TEXTS */
+"SIGN_IN_BUTTON" = "INGRESAR";
+"SUBMIT_BUTTON_TEXT" = "GUARDAR";
+"RENT_BUTTON" = "RENTAR";
+"ADD_TO_WISHLIST_BUTTON" = "AGREGAR A LA LISTA DE DESEO";
 
 /* TAB BAR AND NAVIGATION CONTROLLER*/
 
@@ -23,11 +26,10 @@
 "COMMENT_BOOKED_ERROR" = "HA OCURRIDO UN PROBLEMA";
 "ALERT_BOOKED_SUCCESFULLY" = "RENTA EXITOSA!";
 
-/* ADD NEW BOOK TITLES*/
+/* TEXT FIELDS TITLES */
 
 "TITLE_BOOK" = "TITULO";
 "AUTHOR_BOOK" = "AUTOR";
 "YEAR_BOOK" = "AÑO";
 "GENRE_BOOK" = "GENERO";
 "DESCRIPTION_BOOK" = "DESCRIPCION";
-"SUBMIT_BUTTON_TEXT" = "GUARDAR";
