--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "TITLE_VIEW_RENTALS" = "RENTALS";
 "TITLE_VIEW_DETAILS" = "BOOK DETAILS";
 
-/* COMMENTS TO BOOKED BOOK */
+/* ALERT CUSTOMIZATION*/
 
 "COMMENT_BOOKED_SUCCESSFULLY" = "I BOOKED THE BOOK SUCCESFULLY";
 "COMMENT_BOOKED_NO_RENT" = "THE BOOK IS UNAVAILABLE";
