--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "TITLE_VIEW_RENTALS" = "RENTAS";
 "TITLE_VIEW_DETAILS" = "DETALLES";
 
-/* COMMENTS TO BOOKED BOOK*/
+/* ALERT CUSTOMIZATION*/
 
 "COMMENT_BOOKED_SUCCESSFULLY" = "RESERVO EL LIBRO CON EXITO";
 "COMMENT_BOOKED_ERROR" = "EL LIBRO NO ESTA DISPONIBLE";
