--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -26,6 +26,9 @@
 "COMMENT_BOOKED_NO_RENT" = "THE BOOK IS UNAVAILABLE";
 "COMMENT_BOOKED_ERROR" = "A PROBLEM HAS OCCURRED";
 "ALERT_BOOKED_SUCCESFULLY" = "SUCCESS!";
+"ALERT_GALLERY" = "Gallery";
+"ALERT_CANCEL" = "Cancel";
+"ALERT_CAMERA" = "Camera";
 
 /* TEXT FIELDS TITLES */
 
