--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -25,6 +25,9 @@
 "COMMENT_BOOKED_ERROR" = "EL LIBRO NO ESTA DISPONIBLE";
 "COMMENT_BOOKED_ERROR" = "HA OCURRIDO UN PROBLEMA";
 "ALERT_BOOKED_SUCCESFULLY" = "RENTA EXITOSA!";
+"ALERT_GALLERY" = "Galeria";
+"ALERT_CANCEL" = "Cancelar";
+"ALERT_CAMERA" = "Camara";
 
 /* TEXT FIELDS TITLES */
 
