Advance in input texts

--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -22,13 +22,15 @@
 
 /* ALERT CUSTOMIZATION*/
 
-"COMMENT_BOOKED_SUCCESSFULLY" = "I BOOKED THE BOOK SUCCESFULLY";
-"COMMENT_BOOKED_NO_RENT" = "THE BOOK IS UNAVAILABLE";
-"COMMENT_BOOKED_ERROR" = "A PROBLEM HAS OCCURRED";
+"COMMENT_BOOKED_SUCCESSFULLY" = "I booked the book successfully";
+"COMMENT_BOOKED_NO_RENT" = "The book is unavailable";
+"COMMENT_BOOKED_ERROR" = "A problem has occurred";
 "ALERT_BOOKED_SUCCESFULLY" = "SUCCESS!";
 "ALERT_GALLERY" = "Gallery";
 "ALERT_CANCEL" = "Cancel";
 "ALERT_CAMERA" = "Camera";
+"ALERT_SUBMIT_SUCCESS" = "The book has been sent";
+"ALERT_SUBMIT_ERROR" = "Please complete all fields";
 
 /* TEXT FIELDS TITLES */
 
