--- a/WBooks/es.lproj/Localizable.strings
+++ b/WBooks/es.lproj/Localizable.strings
@@ -7,7 +7,7 @@
 */
 /* BUTTONS TEXTS */
 "SIGN_IN_BUTTON" = "INGRESAR";
-"SUBMIT_BUTTON_TEXT" = "GUARDAR";
+"SUBMIT_BUTTON_TEXT" = "ENVIAR";
 "RENT_BUTTON" = "RENTAR";
 "ADD_TO_WISHLIST_BUTTON" = "AGREGAR A LA LISTA DE DESEO";
 
@@ -21,13 +21,15 @@
 
 /* ALERT CUSTOMIZATION*/
 
-"COMMENT_BOOKED_SUCCESSFULLY" = "RESERVO EL LIBRO CON EXITO";
-"COMMENT_BOOKED_ERROR" = "EL LIBRO NO ESTA DISPONIBLE";
-"COMMENT_BOOKED_ERROR" = "HA OCURRIDO UN PROBLEMA";
+"COMMENT_BOOKED_SUCCESSFULLY" = "Reservo el libro con exito";
+"COMMENT_BOOKED_ERROR" = "El libro no esta disponible :(";
+"COMMENT_BOOKED_ERROR" = "Ha ocurrido un problema";
 "ALERT_BOOKED_SUCCESFULLY" = "RENTA EXITOSA!";
 "ALERT_GALLERY" = "Galeria";
 "ALERT_CANCEL" = "Cancelar";
 "ALERT_CAMERA" = "Camara";
+"ALERT_SUBMIT_SUCCESS" = "El libro ha sido enviado";
+"ALERT_SUBMIT_ERROR" = "Porfavor complete todos los campos";
 
 /* TEXT FIELDS TITLES */
 
