--- a/WBooks/en.lproj/Localizable.strings
+++ b/WBooks/en.lproj/Localizable.strings
@@ -25,7 +25,7 @@
 "COMMENT_BOOKED_SUCCESSFULLY" = "I booked the book successfully";
 "COMMENT_BOOKED_NO_RENT" = "The book is unavailable";
 "COMMENT_BOOKED_ERROR" = "A problem has occurred";
-"ALERT_BOOKED_SUCCESFULLY" = "SUCCESS!";
+"ALERT_BOOKED_SUCCESFULLY" = "¡SUCCESS!";
 "ALERT_GALLERY" = "Gallery";
 "ALERT_CANCEL" = "Cancel";
 "ALERT_CAMERA" = "Camera";
